Key functionality for Application + Scene. Improved camera functionality.
Camera now moves on WSAD keys.

--- a/Panther_Core/Panther_Core.vcxproj.filters
+++ b/Panther_Core/Panther_Core.vcxproj.filters
@@ -9,6 +9,9 @@
     <ClInclude Include="src\Core.h">
       <Filter>Common</Filter>
     </ClInclude>
+    <ClInclude Include="src\Keys.h">
+      <Filter>Common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core.cpp">
