--- a/Panther_Utilities/Panther_Utilities.vcxproj
+++ b/Panther_Utilities/Panther_Utilities.vcxproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
+    <ClInclude Include="src\Space.h" />
     <ClInclude Include="src\Transform.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
