--- a/Panther_Demo/Panther_Demo.vcxproj.filters
+++ b/Panther_Demo/Panther_Demo.vcxproj.filters
@@ -50,4 +50,12 @@
       <Filter>Resources</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="rsc\shaders\shaders.hlsl">
+      <Filter>Resources</Filter>
+    </FxCompile>
+    <FxCompile Include="rsc\shaders\skydome.hlsl">
+      <Filter>Resources</Filter>
+    </FxCompile>
+  </ItemGroup>
 </Project>
