--- a/Panther_Utilities/Panther_Utilities.vcxproj
+++ b/Panther_Utilities/Panther_Utilities.vcxproj
@@ -20,11 +20,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\TextureManager.cpp" />
     <ClCompile Include="src\Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Space.h" />
+    <ClInclude Include="src\TextureManager.h" />
     <ClInclude Include="src\Transform.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
