--- a/Panther_Utilities/Panther_Utilities.vcxproj.filters
+++ b/Panther_Utilities/Panther_Utilities.vcxproj.filters
@@ -7,6 +7,9 @@
     <ClCompile Include="src\Transform.cpp">
       <Filter>Common</Filter>
     </ClCompile>
+    <ClCompile Include="src\TextureManager.cpp">
+      <Filter>Common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Common">
@@ -21,6 +24,9 @@
       <Filter>Common</Filter>
     </ClInclude>
     <ClInclude Include="src\Space.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TextureManager.h">
       <Filter>Common</Filter>
     </ClInclude>
   </ItemGroup>
