--- a/Panther_Renderer/Panther_Renderer.vcxproj.filters
+++ b/Panther_Renderer/Panther_Renderer.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClInclude Include="src\Sampler.h">
       <Filter>Common</Filter>
     </ClInclude>
+    <ClInclude Include="src\RenderTarget.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DX12RenderTarget.h">
+      <Filter>DX12</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DX12Texture.cpp">
@@ -105,6 +111,9 @@
       <Filter>Common</Filter>
     </ClCompile>
     <ClCompile Include="src\DX12CommandList.cpp">
+      <Filter>DX12</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DX12RenderTarget.cpp">
       <Filter>DX12</Filter>
     </ClCompile>
   </ItemGroup>
