--- a/Panther_Renderer/Panther_Renderer.vcxproj
+++ b/Panther_Renderer/Panther_Renderer.vcxproj
@@ -33,6 +33,7 @@
     <ClInclude Include="src\RendererFactory.h" />
     <ClInclude Include="src\RenderTarget.h" />
     <ClInclude Include="src\Sampler.h" />
+    <ClInclude Include="src\SwapChain.h" />
     <ClInclude Include="src\Texture.h" />
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +59,7 @@
     <ClCompile Include="src\Output.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\RendererFactory.cpp" />
+    <ClCompile Include="src\SwapChain.cpp" />
     <ClCompile Include="src\Texture.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
