--- a/Panther_Renderer/Panther_Renderer.vcxproj.filters
+++ b/Panther_Renderer/Panther_Renderer.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="src\DisplayModeList.h">
       <Filter>Common</Filter>
     </ClInclude>
+    <ClInclude Include="src\SwapChain.h">
+      <Filter>Common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DX12Texture.cpp">
@@ -138,6 +141,9 @@
       <Filter>Common</Filter>
     </ClCompile>
     <ClCompile Include="src\DisplayModeList.cpp">
+      <Filter>Common</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SwapChain.cpp">
       <Filter>Common</Filter>
     </ClCompile>
   </ItemGroup>
